--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="more">More</string>
     <string name="you_haven_t_added_any_photos_or_notes_to_this_transaction_yet_add_them_below">You haven\'t added any photos or notes to this transaction yet. Add them below</string>
     <string name="uncategorised">Uncategorised</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
